tests/multiflow_with_flowlib/multiflow_with_flowlib.exp
Error: spread.js:14
 14: funWithRestArray('hi', ...iterableOf123, 'bye', ...iterableOf123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of `funWithRestArray`
 14: funWithRestArray('hi', ...iterableOf123, 'bye', ...iterableOf123);
                                              ^^^^^ string. This type is incompatible with
  5: function funWithRestArray(x: 'hi', y: 123, ...rest: Array<number>) {}
                                           ^^^ number literal `123`

Error: spread.js:14
 14: funWithRestArray('hi', ...iterableOf123, 'bye', ...iterableOf123);
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ rest parameter array of call of `funWithRestArray`. Has some incompatible type argument with
  5: function funWithRestArray(x: 'hi', y: 123, ...rest: Array<number>) {}
                                                         ^^^^^^^^^^^^^ array type
  Type argument `T` is incompatible:
     14: funWithRestArray('hi', ...iterableOf123, 'bye', ...iterableOf123);
                                                  ^^^^^ string. This type is incompatible with
      5: function funWithRestArray(x: 'hi', y: 123, ...rest: Array<number>) {}
                                                                   ^^^^^^ number


Found 2 errors
